Codes were reassigned to the proper Node class and successfully debugged

--- a/BinarySearchProject/BinarySearchProject.csproj
+++ b/BinarySearchProject/BinarySearchProject.csproj
@@ -46,7 +46,7 @@
     <Compile Include="NodeClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tree.cs" />
+    <Compile Include="BinaryTree.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
